tests/snapshots/integration_test__log_data@f668097de57966aedc57b038668f000f.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-anom-abend.log:1"
expression: result
info: "type=ANOM_ABEND msg=audit(1633653915.934:123): auid=4294967295 uid=1000 gid=1000 ses=4294967295 pid=1000 comm=\"ftptls\" reason=\"memory violation\" sig=6\u001dAUID=\"unset\" UID=\"some-user\" GID=\"some-group\""
---
{
  "record_type": "ANOM_ABEND",
  "timestamp": 1633653915934,
  "id": 123,
  "fields": {
    "auid": null,
    "comm": "ftptls",
    "gid": 1000,
    "pid": "1000",
    "reason": "memory violation",
    "ses": "4294967295",
    "sig": "SIGABRT",
    "uid": 1000
  },
  "enrichment": {
    "AUID": "unset",
    "GID": "some-group",
    "UID": "some-user"
  }
}
