tests/snapshots/integration_test__log_data@f80898cedb69017479723219f71fef7f.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/audit-rhel7.log:24"
expression: result
info: "type=SOCKADDR msg=audit(1490816924.990:517644): saddr=0A000016000000000000000000000000000000000000000000000000"
---
{
  "record_type": "SOCKADDR",
  "timestamp": 1490816924990,
  "id": 517644,
  "fields": {
    "saddr": {
      "address": "[::]:22",
      "family": "AF_INET6"
    }
  }
}
