tests/snapshots/integration_test__log_data@f8633e303bd068121c52c47e1136493e.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-crypto-key-user.log:1"
expression: result
info: "type=CRYPTO_KEY_USER msg=audit(1724970643.372:107): pid=2751 uid=0 auid=4294967295 ses=4294967295 msg='op=destroy kind=server fp=SHA256:02:11:7b:31:4b:de:6c:32:85:19:91:e2:22:6d:8e:c6:73:8c:8f:72:2f:c3:36:bd:55:65:23:de:85:a6:ce:13 direction=? spid=2751 suid=0  exe=\"/usr/sbin/sshd\" hostname=? addr=? terminal=? res=success'"
---
{
  "record_type": "CRYPTO_KEY_USER",
  "timestamp": 1724970643372,
  "id": 107,
  "fields": {
    "auid": null,
    "msg": {
      "addr": "?",
      "direction": "?",
      "exe": "/usr/sbin/sshd",
      "fp": "SHA256:02:11:7b:31:4b:de:6c:32:85:19:91:e2:22:6d:8e:c6:73:8c:8f:72:2f:c3:36:bd:55:65:23:de:85:a6:ce:13",
      "hostname": "?",
      "kind": "server",
      "op": "destroy",
      "res": "success",
      "spid": "2751",
      "suid": "root",
      "terminal": "?"
    },
    "pid": "2751",
    "ses": "4294967295",
    "uid": "root"
  }
}
