tests/snapshots/integration_test__log_data@fb33ff7441e9761c2598bc80663e9c22.snap
---
source: tests/integration_test.rs
description: "/home/runner/work/auditd-parser/auditd-parser/tests/data/linux-audit-parser-rs/line-netlabel.log:1"
expression: result
info: "type=MAC_UNLBL_ALLOW msg=audit(1631783567.248:3): netlabel: auid=0 ses=0 unlbl_accept=1 old=0\u001dAUID=\"root\""
---
{
  "Err": {
    "Parser": {
      "Parse": "error Char at:  auid=0 ses=0 unlbl_accept=1 old=0\u001dAUID=\"root\""
    }
  }
}
