tests/snapshots/integration_test__log_data@ffcc5cf060e168f6af1e79ce9de675e7.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-del-group.log:1"
expression: result
info: "type=DEL_GROUP msg=audit(1724970804.251:2683): pid=13860 uid=0 auid=4294967295 ses=4294967295 msg='op=delete-group grp=\"nfsnobody\" acct=\"nfsnobody\" exe=\"/usr/sbin/userdel\" hostname=? addr=? terminal=? res=success'\u001dUID=\"root\" AUID=\"unset\""
---
{
  "record_type": "DEL_GROUP",
  "timestamp": 1724970804251,
  "id": 2683,
  "fields": {
    "auid": null,
    "msg": {
      "acct": "nfsnobody",
      "addr": null,
      "exe": "/usr/sbin/userdel",
      "grp": "nfsnobody",
      "hostname": null,
      "op": "delete-group",
      "res": "success",
      "terminal": null
    },
    "pid": "13860",
    "ses": "4294967295",
    "uid": "root"
  },
  "enrichment": {
    "AUID": "unset",
    "UID": "root"
  }
}
